<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="theme_dark">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
</resources>