<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_search"
        android:textAllCaps="false"
        android:textColor="@color/black_main"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/lupa"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black_main" />

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_library"
        android:textAllCaps="false"
        android:textColor="@color/black_main"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/music"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black_main" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_settings"
        android:textAllCaps="false"
        android:textColor="@color/black_main"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/shester"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black_main" />

</LinearLayout>